--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import requests"
+    "import requests as req"
    ]
   },
   {
@@ -21,7 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install python-dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,11 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "github = os.getenv(\"token\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('token.txt','r') as t:\n",
+    "    token = t.read()"
    ]
   },
   {
@@ -102,10 +112,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url='https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/4.1-lab_api_scavengers_game'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "headers = {\"Authorization\": f\"token {token}\"}\n",
+    "res = req.get(url, headers=headers)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo=res.json()\n",
+    "type(repo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/4.1-lab_api_scavengers_game/forks'\n",
+    "\n",
+    "fork = req.get(url, headers=headers)\n",
+    "fork=fork.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['abelnperez/4.1-lab_api_scavengers_game',\n",
+       " 'AlvaroYague/4.1-lab_api_scavengers_game',\n",
+       " 'Carolina-MH/4.1-lab_api_scavengers_game',\n",
+       " 'karmelealonso/4.1-lab_api_scavengers_game',\n",
+       " 'jomariapc/4.1-lab_api_scavengers_game',\n",
+       " 'illegalvoidundead/4.1-lab_api_scavengers_game',\n",
+       " 'Kohkitos/4.1-lab_api_scavengers_game_koh',\n",
+       " 'luisgh87/4.1-lab_api_scavengers_game',\n",
+       " 'cristianecarneiro/4.1-lab_api_scavengers_game',\n",
+       " 'BorjaSilla/4.1-lab_api_scavengers_game_borja',\n",
+       " 'Lidiavf1912/4.1-lab_api_scavengers_game',\n",
+       " 'yaninafontana84/4.1-lab_api_scavengers_game',\n",
+       " 'charlieciordia/4.1-lab_api_scavengers_game',\n",
+       " 'josegzr/4.1-lab_api_scavengers_game',\n",
+       " 'maluque/4.1-lab_api_scavengers_game',\n",
+       " 'NoeRoson/4.1-lab_api_scavengers_game',\n",
+       " 'LeoBulcsu/4.1-lab_api_scavengers_game',\n",
+       " 'Christelllameda/4.1-lab_api_scavengers_game',\n",
+       " 'anderfer/4.1-lab_api_scavengers_game',\n",
+       " 'SaraPazo/4.1-lab_api_scavengers_game',\n",
+       " 'inesgcalvo/4.1-lab_api_scavengers_game',\n",
+       " 'Blanca95/4.1-lab_api_scavengers_game_Blanca',\n",
+       " 'Ankourii/4.1-lab_api_scavengers_game',\n",
+       " 'ClaraGallardo/4.1-lab_api_scavengers_game',\n",
+       " 'Jacobomb/4.1-lab_api_scavengers_game',\n",
+       " 'EdgarAhmed/4.1-lab_api_scavengers_game',\n",
+       " 'jvr0/4.1-lab_api_scavengers_game',\n",
+       " 'AlejandroCasna/4.1-lab_api_scavengers_game',\n",
+       " 'arromeral/4.1-lab_api_scavengers_game']"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#fork['full_name']\n",
+    "forks=[]\n",
+    "\n",
+    "for e in range(len(fork)):\n",
+    "    forks.append(fork[e]['full_name'])\n",
+    "\n",
+    "forks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jupyter Notebook': 7433}"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url='https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/4.1-lab_api_scavengers_game/languages'\n",
+    "\n",
+    "lang= req.get(url,headers=headers)\n",
+    "lang=lang.json()\n",
+    "lang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jupyter Notebook']"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "langs=list(lang.keys())\n",
+    "langs"
+   ]
   }
  ],
  "metadata": {
@@ -124,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
