--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -24,31 +24,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "developing-printing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code"
+    "#Your code:\n",
+    "\n",
+    "import json\n",
+    "import requests as req\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "github = os.getenv(\"token\")\n",
+    "with open('token.txt','r') as t:\n",
+    "    token = t.read()\n",
+    "\n",
+    "headers = {\"Authorization\": f\"token {token}\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
+   "id": "f01c8642",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://api.github.com/repos/ClaraGallardo/sql-data-base-building/git/commits{/sha}'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url='https://api.github.com/repos/ClaraGallardo/sql-data-base-building'\n",
+    "\n",
+    "link=req.get(url,headers=headers)\n",
+    "link=link.json()\n",
+    "link['git_commits_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "creative-stable",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: print(variable[:10]) "
+    "url='https://api.github.com/repos/ClaraGallardo/sql-data-base-building/commits'\n",
+    "commit=req.get(url,headers=headers)\n",
+    "commit=commit.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ongoing-taylor",
+   "execution_count": 18,
+   "id": "64b360c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(commit)"
+   ]
   }
  ],
  "metadata": {
@@ -67,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
